Adding admin capability to change a user's password.
